# Vega-Strike-Engine-Source

./: .travis.yml
.github/workflows/: brew-graph.yml  matrix-test.yml  openal.yml
engine/: CMakeLists.txt
engine/src/: vsfilesystem.cpp
engine/src/cmd/collide2/: opcodetypes.h
engine/src/gfx/: jpeg_memory.h  particle.h
engine/src/gldrv/: gl_globals.h
find/: CMakeLists.txt  script  script.sh
script/: CMakeLists.txt
