
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(LibraryFinder VERSION "0.1")


#Find GLUT
FIND_PACKAGE(GLUT REQUIRED)
IF (GLUT_FOUND)
    SET(TST_INCLUDES ${TST_INCLUDES} ${GLUT_INCLUDE_DIR})
    SET(TST_LIBS ${TST_LIBS} ${GLUT_LIBRARIES})
    MESSAGE("++ GLUT found : ${GLUT_LIBRARIES}")
ELSE (GLUT_FOUND)
    MESSAGE("!! I can't build this, missing GLUT")
ENDIF (GLUT_FOUND)

