
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(LibraryFinder VERSION "0.1")

#Find GL
FIND_PACKAGE(OpenGL REQUIRED)
IF (OPENGL_FOUND AND OPENGL_GLU_FOUND)
    MESSAGE("++ OpenGL found : ${OPENGL_LIBRARIES}")
ENDIF (OPENGL_FOUND AND OPENGL_GLU_FOUND)

MESSAGE("?? ${OPENGL_LIBRARY_DIR}")

#Find GLUT
FIND_PACKAGE(GLUT)
IF (GLUT_FOUND)
    MESSAGE("++ GLUT found : ${GLUT_INCLUDE_DIR} ${GLUT_LIBRARIES}")
ENDIF (GLUT_FOUND)

SET(OPENGL_LIBRARY_DIR ${OPENGL_INCLUDE_DIR})
MESSAGE("?? ${OPENGL_LIBRARY_DIR}")

#Find GLUT
FIND_PACKAGE(GLUT)
IF (GLUT_FOUND)
    MESSAGE("++ GLUT found : ${GLUT_INCLUDE_DIR} ${GLUT_LIBRARIES}")
ENDIF (GLUT_FOUND)

SET(OPENGL_LIBRARY_DIR "${OPENGL_INCLUDE_DIR}/GLUT")
MESSAGE("?? ${OPENGL_LIBRARY_DIR}")

#Find GLUT
FIND_PACKAGE(GLUT)
IF (GLUT_FOUND)
    MESSAGE("++ GLUT found : ${GLUT_INCLUDE_DIR} ${GLUT_LIBRARIES}")
ENDIF (GLUT_FOUND)

