
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 11)

PROJECT(LibraryFinder VERSION "0.1")


#Find GL
FIND_PACKAGE(OpenGL REQUIRED)
IF (OPENGL_FOUND AND OPENGL_GLU_FOUND)
    SET(TST_INCLUDES ${TST_INCLUDES} ${OPENL_INCLUDE_DIR})
    SET(TST_LIBS ${TST_LIBS} ${OPENGL_LIBRARIES})
    MESSAGE("++ OpenGL found : ${OPENGL_LIBRARIES}")
ELSE (OPENGL_FOUND AND OPENGL_GLU_FOUND)
    MESSAGE("!! Why you no have GL?")
ENDIF (OPENGL_FOUND AND OPENGL_GLU_FOUND)

#Find GLUT
FIND_PACKAGE(GLUT REQUIRED)
IF (GLUT_FOUND)
    SET(TST_INCLUDES ${TST_INCLUDES} ${GLUT_INCLUDE_DIR})
    SET(TST_LIBS ${TST_LIBS} ${GLUT_LIBRARIES})
    MESSAGE("++ GLUT found : ${GLUT_LIBRARIES}")
ELSE (GLUT_FOUND)
    MESSAGE("!! I can't build this, missing GLUT")
ENDIF (GLUT_FOUND)

#Find OpenAL
FIND_PACKAGE(OpenAL REQUIRED)
IF (OPENAL_FOUND)
    SET(TST_INCLUDES ${TST_INCLUDES} ${OPENAL_INCLUDE_DIR})
    SET(TST_LIBS ${TST_LIBS} ${OPENAL_LIBRARY})
    MESSAGE("++ Found OpenAL : ${OPENAL_LIBRARY}")
    SET(HAVE_AL 1)
ELSE (OPENAL_FOUND)
    MESSAGE("!! We aint got no sound")
ENDIF (OPENAL_FOUND)
